Fix mobile overflow

--- a/wp-content/themes/delta-child/style.css
+++ b/wp-content/themes/delta-child/style.css
@@ -117,6 +117,7 @@ Template: astra
 .swiper-team {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .media-wrapper {
